fix z-index in class menu

--- a/faq-accordion-card-main/style.css
+++ b/faq-accordion-card-main/style.css
@@ -152,6 +152,7 @@ h1{
         text-align: center;
         padding-left: 20px;
         padding-right: 20px;
+        z-index: 324234234;
     }
 
     .answer{
